@@ -43,6 +43,7 @@ No longer deletes HTML entities from in setup/maj.php. Creation of a dedicated f
 Decode quotes in AbsenceController::edit
 Fix display and JavaScript errors on my_account page
 Correct check of admin rights in absence:edit controller
+Fix absences url in mails
 
 *** Version 19.10.00       (2019-10-31)   ***
 - Enhancements
